# glsl-factory

./: .gitignore  CMakeLists.txt  Makefile  glsl-factory  glsl-factory.c  gui.c  gui.h  renderer.c  renderer.h  tools.h
shaders/: bubble.f.glsl  bubble.g.glsl  bubble.v.glsl  default.v.glsl  sky.f.glsl  sky.shader  sky.v.glsl
shaders/irr310/: hello-gl.f.glsl  hello-gl.v.glsl  plasma.f.glsl  propeller.f.glsl  propeller.v.glsl  sky-gl.f.glsl  sky.f.glsl
shaders/mandelbulb/: description.shader  f.glsl
shaders/ribbon/: readme.txt  ribbon.f.glsl  ribbon.shader
src/: glsl-factory.c  gui.c  renderer.c  renderer.h  shader.c  shader.h  tools.c  tools.h
