CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(glsl-factory)

ENABLE_LANGUAGE(C)

SET(SRC "${CMAKE_SOURCE_DIR}/src")

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/include/
    )

SUBDIRS(${SRC})


FILE(GLOB_RECURSE source_files
${CMAKE_SOURCE_DIR}/*.c
)

ADD_EXECUTABLE(exe ${source_files})

SET(EXECUTABLE_OUTPUT_PATH
    ${CMAKE_SOURCE_DIR}/build)
